--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <section id="main_content">
         <h2>
-<a id="vanilla--香草中文文档" class="anchor" href="#vanilla--%E9%A6%99%E8%8D%89%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla / (香草<a href="https://idevz.gitbooks.io/vanilla-zh/content/">中文文档</a>)</h2>
+<a id="vanilla--香草中文文档" class="anchor" href="#vanilla--%E9%A6%99%E8%8D%89%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla / (香草<a href="README-zh.md">中文文档</a>)</h2>
 
 <p><em>Vanilla is An OpenResty Lua MVC Web Framework.</em></p>
 
@@ -39,63 +39,70 @@
 <a id="maillist" class="anchor" href="#maillist" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>MailList</em>
 </h3>
 
-<p>vanilla-en <a href="mailto:vanilla-en@googlegroups.com">vanilla-en@googlegroups.com</a></p>
-
-<p>vanilla-devel <a href="mailto:vanilla-devel@googlegroups.com">vanilla-devel@googlegroups.com</a></p>
-
-<p>vanilla中文邮件列表 <a href="mailto:vanilla@googlegroups.com">vanilla@googlegroups.com</a></p>
+<ul>
+<li>vanilla-en <a href="mailto:vanilla-en@googlegroups.com">vanilla-en@googlegroups.com</a>
+</li>
+<li>vanilla-devel <a href="mailto:vanilla-devel@googlegroups.com">vanilla-devel@googlegroups.com</a>
+</li>
+<li>vanilla中文邮件列表 <a href="mailto:vanilla@googlegroups.com">vanilla@googlegroups.com</a>
+</li>
+</ul>
 
 <h3>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Install</em>
 </h3>
+
+<p><em>There are two ways to install:</em></p>
+
+<ul>
+<li>Make (recommended way)</li>
+<li>Luarocks</li>
+</ul>
+
+<h4>
+<a id="tips-of-make-install" class="anchor" href="#tips-of-make-install" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Tips of <code>make install</code>:</em>
+</h4>
+
+<p><em>Vanilla support many configuration options, many of those option have default value.</em></p>
+
+<p>You can use default installation but if your enviroment values different from which vanilla default, please config it with yours.
+Especially the <code>--openresty-path</code> option. you should make sure it's point to your turely OpenResty install path.
+You can run command <code>./configure --help</code> to learn how to use those options. </p>
+
+<p>Below is the installation of a simple example:</p>
 
 <pre><code>./configure --prefix=/usr/local/vanilla --openresty-path=/usr/local/openresty
 
 make install
 </code></pre>
 
-<h5>
-<a id="configure" class="anchor" href="#configure" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>configure</em>
-</h5>
+<h4>
+<a id="tips-of-luarocks-install" class="anchor" href="#tips-of-luarocks-install" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Tips of <code>luarocks install</code>:</em>
+</h4>
 
-<p>Vanilla have default value for the options, but if your environment is different from the default value, please change it with yours.</p>
+<p><em>You can use luarocks to install vanilla, but three point should be clear:</em></p>
 
-<p>And you can run <code>make install</code> after your configuration to install vanill.</p>
+<ol>
+<li>Your luarocks should install with lua5.1.x because of the compatibility problems in ABIs between Lua and Luajit.</li>
+<li>parameter NGX_PATH will be disabled in the nginx.conf.</li>
+<li>make sure that command nginx is in your environment PATH.</li>
+</ol>
 
-<pre><code>./configure --help
-  --help                                this message
+<h3>
+<a id="vanilla-usage" class="anchor" href="#vanilla-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla usage</h3>
 
-  --prefix=PATH                         set the installation prefix (default to /usr/local/vanilla)
-  --vanilla-bin-path=PATH               set vanilla bin path (default to /usr/local/bin)
-  --platform=                           set platform(darwin, linux...)
+<h4>
+<a id="vanilla-cmds" class="anchor" href="#vanilla-cmds" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Vanilla CMDs</em>
+</h4>
 
-  --openresty-path=PATH                 set openresty install path (default to /usr/local/openresty)
-  --with-openresty-luajit-include-path=PATH
-                                        set openresty luajit include path for install C moudle
-                                        (like: /usr/local/openresty/luajit/include/luajit-2.1)
-  --with-luajit-or-lua-bin=BIN          set openresty luajit or standard lua bin for run vanilla vanilla-console
-                                        (default to $openresty_path/luajit/bin/luajit*)
+<p><em>Vanilla provide two commands <code>vanilla</code>, and <code>vanilla-console</code>.</em></p>
 
-  --without-lua-resty-cookie            disable the lua-resty-cookie library
-  --without-lua-resty-template          disable the lua-resty-template library
-  --without-lua-resty-http              disable the lua-resty-http library
-  --without-lua-resty-logger-socket     disable the lua-resty-logger-socket library
-  --without-lua-resty-session           disable the lua-resty-session library
-  --without-lua-resty-shcache           disable the lua-resty-shcache library
-
-  --with-lua-filesystem                 enable and build lua-filesystem
-                                        (must need option --with-openresty-luajit-include-path)
-</code></pre>
-
-<h5>
-<a id="cmds" class="anchor" href="#cmds" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>CMDS</em>
-</h5>
-
-<p>Vanilla provide two commands like <code>vanilla</code>, and <code>vanilla-console</code>, <code>vanilla</code> is for application building, service start, stop and so on, <code>vanilla-console</code> is an interactive command line， you can use it for debugging.</p>
-
-<h5>
-<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>How to use</em>
-</h5>
+<ul>
+<li>
+<code>vanilla</code> is for application building, service start, stop and so on.</li>
+<li>
+<code>vanilla-console</code> is an interactive command line， you can use it for debugging, testing, Lua learning...</li>
+</ul>
 
 <p>Run <code>vanilla</code> in command line, you can find command <code>vanilla</code> provide three options.</p>
 
@@ -113,71 +120,66 @@ Options:
  --trace                Shows additional logs
 </code></pre>
 
-<h2>
-<a id="vanilla-usage" class="anchor" href="#vanilla-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla usage</h2>
-
-<h5>
+<h4>
 <a id="building-up-an-application-skeleton" class="anchor" href="#building-up-an-application-skeleton" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Building up an application skeleton</em>
-</h5>
+</h4>
 
 <pre><code>vanilla new app_name
 cd app_name
 vanilla start [--trace]     -- default running in development environment.
+-- under bash on linux
 VA_ENV=production vanilla start [--trace]  -- add VA_ENV to set the running environment.
+-- under tcsh on BSD
+setenv VA_ENV production ; vanilla start [--trace]  -- add VA_ENV to set the running environment.
 </code></pre>
 
-<h5>
-<a id="the-code-directory-structure" class="anchor" href="#the-code-directory-structure" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>The code directory structure</em>
-</h5>
+<h4>
+<a id="directory-structure" class="anchor" href="#directory-structure" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Directory Structure</em>
+</h4>
 
 <pre><code> /Users/zj-git/app_name/ tree ./
 ./
-├── application（应用代码主体目录）
-│   ├── bootstrap.lua（应用初始化 / 可选&lt;以下未标可选为必选&gt;）
-│   ├── controllers(应用业务代码主体目录)
-│   │   ├── error.lua（应用业务错误处理，处理本路径下相应业务报错）
-│   │   └── index.lua（hello world示例）
-│   ├── library（应用本地类包）
-│   ├── models（应用数据处理类）
-│   │   ├── dao（数据层业务处理）
+├── application
+│   ├── bootstrap.lua --application boot
+│   ├── controllers
+│   │   ├── error.lua --application error handling, dealing with corresponding business under this path error
+│   │   └── index.lua --vanilla hello world
+│   ├── library       --local libs
+│   ├── models 
+│   │   ├── dao       --data handles for DB, APIs
 │   │   │   └── table.lua
-│   │   └── service（服务化业务处理，对DAO的再次封装）
+│   │   └── service   --encapsulations of DAOs
 │   │       └── user.lua
-│   ├── nginx（*Openresty所封装Nginx请求处理各Phase）
-│   │   └── init.lua（*init_by_lua示例）
-│   ├── plugins（插件目录）
-│   └── views（视图层，与controllers一一对应）
-│       ├── error（错误模板）
+│   ├── nginx         --openresy http phases
+│   │   └── init.lua  --init_by_lua demo
+│   ├── plugins
+│   └── views         --one to one correspondence to controllers
+│       ├── error     --error handle view layout
 │       │   └── error.html
-│       └── index（index controller模板）
+│       └── index     --index controller views
 │           └── index.html
-├── config（应用配置目录）
-│   ├── application.lua（应用基础配置 / 路由器、初始化等设置）
-│   ├── errors.lua（应用错误信息配置）
-│   ├── nginx.conf（nginx配置文件模板）
-│   ├── nginx.lua（服务各种运行环境配置 / 是否开启lua_code_cache等）
-│   ├── waf-regs（应用防火墙规则配置目录）
+├── config
+│   ├── application.lua --app basic configuration such as router,initialization settings...
+│   ├── errors.lua    --app error conf
+│   ├── nginx.conf    --nginx.conf skeleton
+│   ├── nginx.lua     --nginx settings like lua_code_cache.
+│   ├── waf-regs      --WAF rules
 │   │   ├── args
 │   │   ├── cookie
 │   │   ├── post
 │   │   ├── url
 │   │   ├── user-agent
 │   │   └── whiteurl
-│   └── waf.lua（服务防火墙配置）
-├── logs（日志目录）
-│   └── hack（攻击日志目录 / 保持可写权限）
-├── pub（应用Nginx配置根路径）
-│   └── index.lua（应用请求入口）
-└── spec（基于busted的单元测试路径）
-    ├── controllers
-    │   └── index_controller_spec.lua
-    ├── models
-    └── spec_helper.lua
+│   └── waf.lua       --app WAF config
+├── logs
+│   └── hack          --attack logs, keep path can be write
+├── pub               --app content_by_lua_file path
+    └── index.lua     --entrance file
 </code></pre>
 
-<h5>
-<a id="demo-indexcontroller" class="anchor" href="#demo-indexcontroller" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>demo IndexController</em>
-</h5>
+<h4>
+<a id="indexcontroller-demo" class="anchor" href="#indexcontroller-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>IndexController Demo</em>
+</h4>
 
 <pre><code>local IndexController = {}
 
@@ -194,7 +196,7 @@ return IndexController
 </code></pre>
 
 <h5>
-<a id="template-demo-viewsindexindexhtml" class="anchor" href="#template-demo-viewsindexindexhtml" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Template demo views/index/index.html</em>
+<a id="template-demo-viewsindexindexhtml" class="anchor" href="#template-demo-viewsindexindexhtml" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Template demo (views/index/index.html)</em>
 </h5>
 
 <pre><code>&lt;!DOCTYPE html&gt;
@@ -206,48 +208,49 @@ return IndexController
 &lt;/html&gt;
 </code></pre>
 
-<h2>
-<a id="why-you-need-vanilla" class="anchor" href="#why-you-need-vanilla" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why You need Vanilla</h2>
+<h3>
+<a id="why-vanilla" class="anchor" href="#why-vanilla" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Vanilla</h3>
 
-<p>回答这个问题，我们只需要看清楚Openresty和Vanilla各自做了什么即可。</p>
+<p><em>To answer this question, we just need to see what did Openresty and Vanilla have done.</em></p>
 
-<h5>
+<h4>
 <a id="openresty" class="anchor" href="#openresty" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Openresty</em>
-</h5>
+</h4>
 
 <ul>
-<li>提供了处理HTTP请求的全套整体解决方案</li>
-<li>给Nginx模块开发开辟了一条全新的道路，我们可以使用Lua来处理Web请求</li>
-<li>形成了一个日趋完善的生态，这个生态涵盖了高性能Web服务方方面面 </li>
+<li>Provides processing HTTP requests a full set of the overall solution</li>
+<li>Opened up a new way for Nginx module development, we can use Lua to deal with Web requests</li>
+<li>Formed an increasingly perfect ecology, the ecological covers all aspects of high-performance Web services </li>
 </ul>
 
-<h5>
+<h4>
 <a id="vanilla" class="anchor" href="#vanilla" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Vanilla</em>
-</h5>
+</h4>
 
 <ul>
-<li>基于Openresty开发，具备Openresty一切优良特性</li>
-<li>实现了自动化、配置化的Nginx指令集管理</li>
-<li>更合理的利用Openresty封装的8个处理请求Phase</li>
-<li>支持不同运行环境（开发、测试、上线）服务的自动化配置和运行管理</li>
-<li>使复杂的Nginx配置对Web业务开发者更透明化</li>
-<li>开发者不再需要了解Openresty的实现细节，而更关注业务本身</li>
-<li>实现了Web开发常规的调试，错误处理，异常捕获</li>
-<li>实现了请求的完整处理流程和插件机制，支持路由协议、模板引擎的配置化</li>
-<li>整合、封装了一系列Web开发常用的工具集、类库（cookie、应用防火墙等）</li>
-<li>功能使用方便易于扩展</li>
+<li>Implement a Web development routine debugging, error handling, exception handling</li>
+<li>Implement complete processing of the request and plug-in mechanism, support routing protocol, the template engine configuration</li>
+<li>Integration, encapsulates a series of Web development commonly used tool set, class library (cookies, application firewall, etc.)</li>
+<li>Features easy to use and extend</li>
+<li>Support  different environment (development, test, online)</li>
+<li>Focus on the business development, not any about nginx nor OpenResty</li>
+<li>Based on OpenResty, have all the good qualities of OpenResty</li>
+<li>Automated, Nginx instruction set of configuration management</li>
+<li>More reasonable use Openresty encapsulation of request processing Phase</li>
 </ul>
 
-<h2>
-<a id="社区组织" class="anchor" href="#%E7%A4%BE%E5%8C%BA%E7%BB%84%E7%BB%87" aria-hidden="true"><span class="octicon octicon-link"></span></a>社区组织</h2>
+<h3>
+<a id="community" class="anchor" href="#community" aria-hidden="true"><span class="octicon octicon-link"></span></a>Community</h3>
 
-<h5>
-<a id="qq群微信公众号" class="anchor" href="#qq%E7%BE%A4%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>QQ群&amp;&amp;微信公众号</em>
-</h5>
+<h4>
+<a id="qq-groupswechat-public-no" class="anchor" href="#qq-groupswechat-public-no" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>QQ Groups&amp;&amp;WeChat public no.</em>
+</h4>
 
-<p><em>Openresty/Vanilla开发QQ群：205773855（专题讨论Vanilla相关话题）</em><br>
-<em>Openresty 技术交流QQ群：34782325（讨论OpenResty和各种高级技术）</em><br>
-<em>Vanilla开发微信公众号:Vanilla-OpenResty(Vanilla相关资讯、文档推送)</em></p>
+<ul>
+<li><em>Openresty/Vanilla Dev:205773855 (Vanilla panel discussion related topics)</em></li>
+<li><em>Openresty:34782325(Discuss OpenResty and all kinds of advanced technology)</em></li>
+<li><em>WeChat public no. of Vanilla Dev:Vanilla-OpenResty(Vanilla related information, document push)</em></li>
+</ul>
 
 <p><a href="http://shang.qq.com/wpa/qunwpa?idkey=673157ee0f0207ce2fb305d15999225c5aa967e88913dfd651a8cf59e18fd459"><img src="http://pub.idqqimg.com/wpa/images/group.png" alt="QQ"></a></p>
       </section>
