--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <div class="container">
       <section id="main_content">
         <h2>
-<a id="vanilla--香草中文文档" class="anchor" href="#vanilla--%E9%A6%99%E8%8D%89%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla / (香草<a href="README-zh.md">中文文档</a>)</h2>
+<a id="vanilla--香草中文文档--osc-git" class="anchor" href="#vanilla--%E9%A6%99%E8%8D%89%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3--osc-git" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vanilla / (香草<a href="https://idevz.gitbooks.io/vanilla-zh/content/">中文文档</a>) / OSC <a href="http://git.oschina.net/idevz/vanilla">Git</a>
+</h2>
 
 <p><em>Vanilla is An OpenResty Lua MVC Web Framework.</em></p>
 
-<p><img src="http://upload.jianshu.io/collections/images/225552/w-vanilla.png?imageMogr/thumbnail/300x300" alt="Vanilla"></p>
+<p><img src="http://static.oschina.net/uploads/space/2015/1220/074028_k84j_730111.png" alt="Vanilla"></p>
 
 <h3>
 <a id="maillist" class="anchor" href="#maillist" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>MailList</em>
